# Kursovaya

./: README.md
Курсовая работа/: CMakeLists.txt  Kursach4sem  main.cpp
Курсовая работа/Headers/: ComputerPart.h  CpuInfo.h  HardwareInfo.h  HddInfo.h  MemoryInfo.h  PciInfo.h  SystemInfo.h
Курсовая работа/Modules/: ComputerPart.cpp  CpuInfo.cpp  HardwareInfo.cpp  HddInfo.cpp  MemoryInfo.cpp  PciInfo.cpp  SystemInfo.cpp
